test_suite/tests/ui/conflict/flatten-tuple-struct.stderr
error: #[serde(flatten)] cannot be used on tuple structs
 --> $DIR/flatten-tuple-struct.rs:5:17
  |
5 | struct Foo(u32, #[serde(flatten)] HashMap<String, String>);
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

